# crates-autodoc

./: .buildpacks  .gitmodules  Cargo.toml  README.md  RustConfig
.cargo/: config
src/: lib.rs  worker.rs
